vendor/linux/x64/ftd2xx.h


typedef PVOID	FT_HANDLE;
typedef ULONG	FT_STATUS;
typedef ULONG	FT_DEVICE;
	FTD2XX_API FT_STATUS FT_SetVIDPID(
		DWORD dwVID,
		DWORD dwPID
		);
	FTD2XX_API FT_STATUS FT_GetVIDPID(
		DWORD * pdwVID,
		DWORD * pdwPID
		);
	FTD2XX_API FT_STATUS WINAPI FT_GetDeviceInfo(
		FT_HANDLE ftHandle,
		FT_DEVICE *lpftDevice,
		LPDWORD lpdwID,
		PCHAR pcSerialNumber,
		PCHAR pcDescription,
		LPVOID pvDummy
		);
	FTD2XX_API FT_STATUS WINAPI FT_GetDeviceLocId(
		FT_HANDLE ftHandle,
		LPDWORD lpdwLocId
		);
	FTD2XX_API FT_STATUS WINAPI FT_ResetPort(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_CyclePort(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetResetPipeRetryCount(
		FT_HANDLE ftHandle,
		DWORD dwCount
		);
	FTD2XX_API FT_STATUS WINAPI FT_StopInTask(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_RestartInTask(
		FT_HANDLE ftHandle
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetDeadmanTimeout(
		FT_HANDLE ftHandle,
		ULONG ulDeadmanTimeout
		);
	FTD2XX_API FT_STATUS WINAPI FT_SetUSBParameters(
		FT_HANDLE ftHandle,
		ULONG ulInTransferSize,
		ULONG ulOutTransferSize
		);
	FTD2XX_API FT_HANDLE WINAPI FT_W32_CreateFile(
		LPCTSTR					lpszName,
		DWORD					dwAccess,
		DWORD					dwShareMode,
		LPSECURITY_ATTRIBUTES	lpSecurityAttributes,
		DWORD					dwCreate,
		DWORD					dwAttrsAndFlags,
		HANDLE					hTemplate
		);
	FTD2XX_API BOOL WINAPI FT_W32_CloseHandle(
		FT_HANDLE ftHandle
		);
	FTD2XX_API BOOL WINAPI FT_W32_ReadFile(
		FT_HANDLE ftHandle,
		LPVOID lpBuffer,
		DWORD nBufferSize,
		LPDWORD lpdwBytesReturned,
		LPOVERLAPPED lpOverlapped
		);
	FTD2XX_API BOOL WINAPI FT_W32_WriteFile(
		FT_HANDLE ftHandle,
		LPVOID lpBuffer,
		DWORD nBufferSize,
		LPDWORD lpdwBytesWritten,
		LPOVERLAPPED lpOverlapped
		);
	FTD2XX_API BOOL WINAPI FT_W32_GetOverlappedResult(
		FT_HANDLE ftHandle,
		LPOVERLAPPED lpOverlapped,
		LPDWORD lpdwBytesTransferred,
		BOOL bWait
		);
typedef struct _FTCOMSTAT {
	DWORD fCtsHold : 1;
	DWORD fDsrHold : 1;
	DWORD fRlsdHold : 1;
	DWORD fXoffHold : 1;
	DWORD fXoffSent : 1;
	DWORD fEof : 1;
	DWORD fTxim : 1;
	DWORD fReserved : 25;
	DWORD cbInQue;
	DWORD cbOutQue;
} FTCOMSTAT, *LPFTCOMSTAT;
typedef struct _FTDCB {
	DWORD DCBlength;              
	DWORD BaudRate;               
	DWORD fBinary : 1;            
	DWORD fParity : 1;            
	DWORD fOutxCtsFlow : 1;       
	DWORD fOutxDsrFlow : 1;       
	DWORD fDtrControl : 2;        
	DWORD fDsrSensitivity : 1;    
	DWORD fTXContinueOnXoff : 1;  
	DWORD fOutX : 1;              
	DWORD fInX : 1;               
	DWORD fErrorChar : 1;         
	DWORD fNull : 1;              
	DWORD fRtsControl : 2;        
	DWORD fAbortOnError : 1;      
	DWORD fDummy2 : 17;           
	WORD wReserved;               
	WORD XonLim;                  
	WORD XoffLim;                 
	BYTE ByteSize;                
	BYTE Parity;                  
	BYTE StopBits;                
	char XonChar;                 
	char XoffChar;                
	char ErrorChar;               
	char EofChar;                 
	char EvtChar;                 
	WORD wReserved1;              
} FTDCB, *LPFTDCB;
	FTD2XX_API DWORD WINAPI FT_W32_GetLastError(
		FT_HANDLE ftHandle
		);
	FTD2XX_API BOOL WINAPI FT_W32_CancelIo(
		FT_HANDLE ftHandle
		);